[package]
name = "zeroconf-macros"
version = "0.1.1"
authors = ["Walker Crouse <walkercrouse@hotmail.com>"]
edition = "2018"
description = "Macros for zeroconf crate"
readme = "../README.md"
homepage = "https://github.com/windy1/zeroconf-rs"
repository = "https://github.com/windy1/zeroconf-rs"
license-file = "../LICENSE"
keywords = ["zeroconf", "mdns", "avahi", "bonjour", "dnssd"]
categories = ["api-bindings", "network-programming", "os", "os::linux-apis", "os::macos-apis"]

[lib]
proc-macro = true

[dependencies]
syn = "1.0.41"
quote = "1.0.7"
