[package]
name = "zeroconf"
version = "0.1.0-beta"
authors = ["Walker Crouse <walkercrouse@hotmail.com>"]
edition = "2018"
description = "zeroconf is a cross-platform library that wraps underlying ZeroConf/mDNS implementations such as Bonjour or Avahi, providing an easy and idiomatic way to both register and browse services."
readme = "../README.md"
homepage = "https://github.com/windy1/zeroconf-rs"
repository = "https://github.com/windy1/zeroconf-rs"
license-file = "../LICENSE"
keywords = ["zeroconf", "mdns", "avahi", "bonjour", "dnssd"]
categories = ["api-bindings", "network-programming", "os", "os::linux-apis", "os::macos-apis"]

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
derive-getters = "0.2.0"
derive_builder = "0.9.0"
log = "0.4.11"
libc = "0.2.77"
zeroconf-macros = { path = "../zeroconf-macros", version = "0.1.0" }

[target.'cfg(unix)'.dependencies]
avahi-sys = "0.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
bonjour-sys = "0.1.0"
