[package]
name = "zeroconf"
version = "0.10.2"
authors = ["Walker Crouse <walkercrouse@hotmail.com>"]
edition = "2018"
description = "cross-platform library that wraps ZeroConf/mDNS implementations like Bonjour or Avahi"
readme = "../README.md"
homepage = "https://github.com/windy1/zeroconf-rs"
repository = "https://github.com/windy1/zeroconf-rs"
license-file = "../LICENSE"
keywords = ["zeroconf", "mdns", "avahi", "bonjour", "dnssd"]
categories = ["api-bindings", "network-programming", "os", "os::linux-apis", "os::macos-apis"]
documentation = "https://docs.rs/zeroconf"

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
derive-getters = "0.2.0"
derive_builder = "0.9.0"
derive-new = "0.5.8"
log = "0.4.11"
libc = "0.2.77"
zeroconf-macros = { path = "../zeroconf-macros", version = "0.1.2" }

[dev-dependencies]
env_logger = "0.7.1"
maplit = "1.0.2"
serde_json = "1.0.57"
tokio = { version = "1.10.1", features = ["full"] }
serial_test = "0.5.1"

[target.'cfg(unix)'.dependencies]
avahi-sys = "0.10.0"

[target.'cfg(target_vendor = "apple")'.dependencies]
bonjour-sys = "0.1.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
