[package]
name = "zeroconf"
version = "0.13.0"
authors = ["Walker Crouse <walkercrouse@hotmail.com>"]
edition = "2018"
description = "cross-platform library that wraps ZeroConf/mDNS implementations like Bonjour or Avahi"
readme = "../README.md"
homepage = "https://github.com/windy1/zeroconf-rs"
repository = "https://github.com/windy1/zeroconf-rs"
license-file = "../LICENSE"
keywords = ["zeroconf", "mdns", "avahi", "bonjour", "dnssd"]
categories = [
    "api-bindings",
    "network-programming",
    "os::linux-apis",
    "os::macos-apis",
    "os::windows-apis",
]
documentation = "https://docs.rs/zeroconf"

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
derive-getters = "0.3.0"
derive_builder = "0.9.0"
derive-new = "0.5.9"
log = "0.4.20"
libc = "0.2.148"
zeroconf-macros = { path = "../zeroconf-macros", version = "0.1.3" }

[dev-dependencies]
env_logger = "0.10.0"
maplit = "1.0.2"
serde_json = "1.0.107"
clap = { version = "4.4.4", features = ["derive"] }

[target.'cfg(unix)'.dependencies]
avahi-sys = "0.10.1"

[target.'cfg(target_vendor = "apple")'.dependencies]
bonjour-sys = "0.2.0"

[target.'cfg(target_vendor = "pc")'.dependencies]
bonjour-sys = "0.2.0"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
